# discord-bot-monitoring

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-build-publish-ghcr.yml  linting.yml
deploy/: compose.yaml  config.toml
src/: bot.py  config.py  main.py  server.py
